# embodichain_task_template

./: .gitignore  README.md  pyproject.toml
configs/demo/: cobot_magic_move.json  cobot_magic_open_drawer.json  dummy.json
embodichain_task_template/: __init__.py
embodichain_task_template/data/: __init__.py
embodichain_task_template/tasks/: __init__.py  dummy_task.py  open_drawer.py  simple_motion.py
scripts/: run_env.py
