[project]
name = "embodichain-task-template"
description = "Template repository for building Embodied AI task environment using EmbodiChain."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = {text = "Apache-2.0"}
authors = [
    {name = "To be determined"}
]
keywords = ["robotics", "embodied-ai", "manipulation", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "embodichain",
]

[project.urls]
Repository = "https://github.com/DexForce/embodichain_task_template"

# Register this package as an EmbodiChain task package. Importing it triggers
# auto-registration of all task environments (via @register_env). The unified
# ``run_env`` CLI discovers this entry point at startup via
# ``discover_task_packages`` in ``embodichain.lab.gym.utils.registration``.
[project.entry-points."embodichain.tasks"]
"embodichain_task_template" = "embodichain_task_template"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs"]

[tool.setuptools.dynamic]
version = { file = ["embodichain_task_template/VERSION"] }

[tool.black]
